# rosie_map_updater

./: CMakeLists.txt  package.xml
launch/: rosie_map_updater.launch
src/: rosie_map_updater.cpp  rosie_update_service.cpp
srv/: GetGrid.srv  NewGrid.srv
